Refactor privacy policy iframe layout

--- a/main-pages/about/privacy-policy/full-privacy-policy.html
+++ b/main-pages/about/privacy-policy/full-privacy-policy.html
@@ -23,9 +23,8 @@
   </div>
 </header>
 
-<div class="divider"><iframe src="../../../embeds/full-privacy-policy.html" style="width: 1020px; height: 5100px; border: none;"></iframe></div>	
-
-
+<div class="divider"></div>	
+	<iframe src="../../../embeds/full-privacy-policy.html" style="width: 1020px; height: 5100px; border: none;"></iframe>
 <div class="divider"></div>
   
 <div class="button-row">
