--- a/main-pages/about/license.html
+++ b/main-pages/about/license.html
@@ -1,1 +1,172 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1869455728729943"
+     crossorigin="anonymous"></script>	
+<link rel="icon" type="image/jpg" href="../../assets/images/favicon.jpg">
+  
+	<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Penguado - License</title>
+  <link rel="stylesheet" href="../../assets/css/style.css">
+  <script src="../../assets/js/script.js" defer></script>
+</head>
+<body>
+<!-- Nav Bar -->
+<div id="nav-placeholder"></div>
 
+<!-- Banner -->
+<header class="banner" style="height: 400px">
+  <div class="banner-overlay">
+    <h1 class="page-title">License</h1>
+    <div class="title-underline"></div>
+  </div>
+</header>
+
+<div class="divider"></div>
+<main class="content">
+ <p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  Penguado License
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Effective Date: 7 June 2025<br>
+  Last Updated: 17 August 2025<br><br>
+  This License Agreement (“License”) governs all code, software, assets, designs, documentation, and related materials developed by and distributed under the Penguado project. By accessing, using, copying, or otherwise interacting with Penguado code or services, you agree to be bound by the terms of this License.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>1. Ownership and Copyright
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  All rights, title, and interest in the Penguado codebase, software, design, and associated works are the exclusive property of Penguado and the developer at <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">penguado.web@gmail.com</a>.<br>
+  This work is protected under United States copyright law and international copyright treaties.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>2. Grant of Rights
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  You are granted a personal, non-transferable, non-exclusive, revocable license to access and use Penguado solely for lawful personal use.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  You may not:
+</p>
+<ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  <li>Copy, modify, alter, or create derivative works of Penguado’s code</li>
+  <li>Redistribute, re-host, or make Penguado’s code or services available to others in any form</li>
+  <li>Remove copyright notices or ownership statements</li>
+  <li>Attempt to reverse engineer, decompile, or extract source code</li>
+  <li>Use Penguado’s code or services for commercial purposes without written permission</li>
+</ul>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  All rights not expressly granted in this License remain with Penguado.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>3. Prohibited Uses
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  You may not use Penguado’s code or services for any illegal, abusive, or unauthorized purposes, including but not limited to:
+</p>
+<ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  <li>Circumventing copyright restrictions</li>
+  <li>Distributing Penguado’s source code or binaries</li>
+  <li>Hosting Penguado under a different name, domain, or service without permission</li>
+  <li>Using Penguado for harassment, malicious activity, or unlawful conduct</li>
+</ul>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>4. Enforcement
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado actively enforces its intellectual property rights. Unauthorized use, reproduction, or distribution of Penguado’s code or services may result in:
+</p>
+<ul class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  <li>Immediate suspension of access</li>
+  <li>Legal action under applicable copyright, intellectual property, and contract laws</li>
+  <li>Claims for damages, penalties, and attorney’s fees</li>
+</ul>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>5. Termination
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  This License is effective until terminated. It will terminate automatically without notice if you breach any terms herein. Upon termination, you must immediately cease use of Penguado code and services and destroy any copies in your possession.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>6. No Warranty
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  Penguado’s code and services are provided “as is” and without warranties of any kind, whether express or implied. Penguado disclaims all liability for damages arising from use of its software or services.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>7. Jurisdiction and Governing Law
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  This License shall be governed by and construed under the laws of the United States and the Commonwealth of Massachusetts.<br>
+  All disputes shall be resolved exclusively in the state or federal courts of Massachusetts, USA.
+</p>
+
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif; font-weight: bold; font-size: 1.125em;">
+  <br>8. Contact Information
+</p>
+<p class="penguado-text" style="text-align: left; font-family: 'Roboto', Arial, sans-serif;">
+  For license inquiries, permissions, or reporting violations, contact:<br>
+  <a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">penguado.web@gmail.com</a>
+</p>
+</main>
+
+ <div class="divider"></div>
+  <div class="button-row">
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./index.html'">Return to About</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./privacy-policy/index.html'">Go to Privacy Policy</button>
+  <button style="width: 330px" class="button-outlined" onclick="window.location.href='./terms-of-service/index.html'">Go to Terms of Service</button>
+
+</div>
+  
+<div class="button-row">
+  <button style="width: 1020px" class="button-outlined" onclick="window.location.href='../../main-pages/support-us/index.html'">
+    Help Support Penguado — Minimal Ads, Maximum Speed
+  </button>
+</div>
+
+<div class="divider"></div>
+  	<iframe src="../../embeds/cookie-policy.html" style="width: 100%; height: 100%; border: none; padding-bottom: 20px; padding-top: 20px;"></iframe>
+
+
+<!-- Footer DO NOT EDIT -->
+<footer class="footer" style="padding-bottom: 100px;">
+  <div class="footer-content">
+    <div class="text-left">
+      <p style="font-size: 12px;">
+        © 2025 Penguado (https://penguado.top).<br>
+        All rights reserved. Unauthorized use of this code is prohibited. 
+        <a href="../../../about/license.html" style="font-weight: bold; color: #00897b; text-decoration: none;">View License</a><br><br>
+        We are working hard to improve your user experience.
+      </p>
+    </div>
+
+    <div class="text-right">
+      <p style="font-size: 12px;"><a href="https://docs.google.com/forms/d/e/1FAIpQLSflCjk3LJGbKFE3uZL41WD9VUDdDYfEPPXwhYnduLV0jhFifg/viewform?usp=header" style="font-weight: bold; color: #00897b; text-decoration: none;">Feedback</a></p>
+      <p style="font-size: 12px;"><a href="mailto:penguado.web@gmail.com" style="font-weight: bold; color: #00897b; text-decoration: none;">Contact us</a></p>
+      <p style="font-size: 12px;"><a href="../../about/privacy-policy/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Privacy Policy</a></p>
+      <p style="font-size: 12px;"><a href="../../about/terms-of-service/index.html" style="font-weight: bold; color: #00897b; text-decoration: none;">Terms of Service</a></p>
+    </div>
+  </div>
+
+  <iframe src="../../embeds/heartbeat.html" style="width: 10px; height: 10px; border: none;"></iframe>
+</footer>
+</body>
+
+<script>
+  fetch("../../navigation.html")
+    .then(response => response.text())
+    .then(data => {
+      document.getElementById("nav-placeholder").innerHTML = data;
+    });
+</script>
+</html>
